[package]
name = "lapic"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A self-contained crate implementing safe types for the local APIC registers on x86_64 systems."
readme = "README.md"
repository = "https://github.com/00xc/lapic"
keywords = ["x86", "apic", "lapic"]

[dependencies]
modular-bitfield = "0.11.2"

[dev-dependencies]
memoffset = "0.9.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
